Feat: アカウント登録 (ログイン機能はありません) その他、以下の機能に変更がありました * requirements.txt: snowflake-id を追加。 * ユーザー: アイコンやヘッダーのURLを指定できるように * レター: 添付ファイルをつけることができるように * /api/users/stat・/api: 返り値がJSONであることが明確になりました * sendmail.py: なんで俺のメアドなんだ？？？ * nodeinfo: /.well-known/nodeinfo にパスを変更。 * config: サーバー名・サーバー説明を設定できるように。 その他、軽微なバグ取り。

--- a/config-example.yml
+++ b/config-example.yml
@@ -1,5 +1,13 @@
 # Nyantter config file
 
+server:
+  name: Nyantter
+  description: Nyantter is a new SNS
+
+  # The url of nyantter server
+  # Do not change this value if you have published the Nyantter server at least once.
+  url: https://example.com/
+
 # account registration setting
 register:
   # Whether to activate registration or not.
@@ -14,6 +22,8 @@ register:
 
 # mail sender setting
 mail:
+  enableMail: true
+
   host: smtp.example.com
   port: 587
   username: nyantter@example.com
@@ -32,9 +42,3 @@ database:
   pass: password123456LOL
 
   prefix: ""
-
-# ActivityPub federation functionality will be provided in the future
-activitypub:
-  # The url of nyantter server
-  # Do not change this value if you have published the Nyantter server at least once.
-  url: https://example.com/
