--- a/config-example.yml
+++ b/config-example.yml
@@ -6,7 +6,7 @@ server:
 
   # The url of nyantter server
   # Do not change this value if you have published the Nyantter server at least once.
-  url: https://example.com/
+  url: https://example.com
 
 # account registration setting
 register:
